# automacao-juridica-assistida

./: .env.example  .gitignore  CHANGELOG.md  Makefile  Modelo de dados: PROJECT sem database engine escolhido no questionário. Modelo de dados não gerado. Defina Q31 (primary_database) pra habilitar.  README.md  SQLite local-first com SQLCipher e backup criptografado automático diário definidos (RPO 24h, RTO <15min). Restore wizard com validação de integridade. Porém, faltam: estimativas de volume por usuário  docker-compose.yml
.github/workflows/: cd.yml  ci.yml
backend/: Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_seed_reference_data.py
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py  dependencies.py  exception_handlers.py  router.py
backend/src/api/middleware/: __init__.py  logging_middleware.py  rate_limiter.py
backend/src/api/routes/: __init__.py  analysis_routes.py  audit_routes.py  auth_routes.py  case_routes.py  chat_routes.py  document_routes.py  health_routes.py
backend/src/application/: __init__.py
backend/src/application/dtos/: __init__.py  analysis_dtos.py  auth_dtos.py  case_dtos.py  chat_dtos.py  document_dtos.py
backend/src/application/use_cases/: __init__.py  audit_use_cases.py
backend/src/domain/: __init__.py
backend/src/domain/entities/: __init__.py  analysis.py  document.py
backend/src/domain/ports/: __init__.py  analysis_repository_port.py  audit_repository_port.py  case_repository_port.py  chat_repository_port.py  storage_port.py  user_repository_port.py
backend/src/infrastructure/: __init__.py
backend/src/infrastructure/config/: __init__.py  settings.py
backend/src/infrastructure/database/: __init__.py
backend/src/infrastructure/database/models/: __init__.py  analysis.py  audit_log.py  case.py  chat_session.py  document.py  user.py
backend/src/infrastructure/repositories/: __init__.py
backend/src/infrastructure/security/: __init__.py  anonymizer.py  password_hasher.py
backend/src/modules/: __init__.py  m01_business_case_validation.py  m02_data_confidentiality_compliance.py  m03_mvp_user_stories_definition.py  m04_performance_targets.py  m06_data_model_engine_config.py  m07_stack_configuration.py  m09_unit_testing_config.py  m11_e2e_testing_config.py  m12_security_testing_config.py  m13_performance_testing_config.py  m14_compliance_testing_config.py  m15_quality_gate_config.py  m16_risk_business_case.py  m17_risk_mvp_discovery.py  m18_risk_anonymization_pipeline.py  m19_deliverables_summary.py  m20_phase0_prerequisites.py  m21_phase1_foundation.py  m23_output_formats_dashboard.py
docs/: ERS.md  README.md  test_plan.md
docs/api/: openapi-config.md
docs/architecture/: adr-001-monolith-modular.md  adr-002-database-postgresql.md  adr-003-llm-anonymization.md  c4-container.md  c4-context.md
docs/deployment/: backup-restore.md  docker-guide.md
frontend/: .env.example  Dockerfile  index.html  package.json  postcss.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/layout/: Header.tsx  MainLayout.tsx  Sidebar.tsx
frontend/src/components/ui/: Button.tsx  DataTable.tsx  FileUpload.tsx  Input.tsx  Modal.tsx
frontend/src/hooks/: useAnalysis.ts  useAudit.ts  useCases.ts  useChat.ts  useDocuments.ts
frontend/src/lib/: api-client.ts  auth-context.tsx  query-client.ts
frontend/src/pages/: AnalysisPage.tsx  AuditPage.tsx  CasesPage.tsx  ChatPage.tsx  DashboardPage.tsx  DocumentsPage.tsx  LoginPage.tsx
frontend/src/routes/: AuthGuard.tsx  index.tsx
frontend/src/schemas/: case.schema.ts  document.schema.ts  login.schema.ts
frontend/src/styles/: globals.css
frontend/src/types/: api.ts  auth.ts
nginx/: Dockerfile  nginx.conf
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: documentos.rs  ia_chat.rs  mod.rs
src-tauri/src/domain/: errors.rs  mod.rs
src-tauri/src/infra/: mod.rs
